<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forklift_gazebo</name>
  <version>0.1.0</version>
  <description>叉车Gazebo仿真包，包含仓库world文件、托盘模型和仿真launch文件</description>
  <maintainer email="forklift@example.com">forklift_dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Gazebo仿真依赖 -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- forklift_description包依赖（获取URDF）-->
  <exec_depend>forklift_description</exec_depend>

  <!-- Python脚本依赖 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
