<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forklift_navigation</name>
  <version>0.1.0</version>
  <description>
    叉车仿真系统导航模块：基于 Nav2 + AMCL + SLAM Toolbox 的完整导航栈，
    针对叉车运动特性优化参数（低速、大转弯半径）。
  </description>
  <maintainer email="forklift@example.com">forklift_dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Nav2 核心依赖 -->
  <depend>nav2_bringup</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_common</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_costmap_2d</depend>

  <!-- SLAM 依赖 -->
  <depend>slam_toolbox</depend>

  <!-- ROS2 消息依赖 -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>

  <!-- TF2 依赖 -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Python 依赖 -->
  <depend>rclpy</depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
